index-scheduler/src/snapshots/index_scheduler__tests__settings_update-5.snap
---
source: index-scheduler/src/lib.rs
expression: embedding_config.embedder_options
---
{
  "Rest": {
    "api_key": "My super secret",
    "distribution": null,
    "dimensions": 4,
    "url": "http://localhost:7777",
    "query": null,
    "input_field": [
      "input"
    ],
    "path_to_embeddings": [
      "data"
    ],
    "embedding_object": [
      "embedding"
    ],
    "input_type": "text"
  }
}
